# opencvFindRectangleColor

./: CMakeLists.txt  main.cpp  rgb2name.cpp  rgb2name.h
